Bug 366009 - Cocoa should not generate bogus open events for path-like arguments on the command line. r=bsmedberg, smichaud a=bz